[package]
name = "pdbget"
version = "0.1.1"
authors = ["Ta Thanh Dinh <tathanhdinh@gmail.com>"]

[dependencies]
goblin = { git = "https://github.com/m4b/goblin.git" }
glob = "*"
clap = "*"
uuid = { git = "https://github.com/rust-lang-nursery/uuid.git" }
if_chain = "*"
reqwest = "*"
indicatif = "*"
hex = "*"
rayon = { git = "https://github.com/rayon-rs/rayon.git" }
byteorder = "*"
failure = "*"
structopt = "*"
lazy_static = "*"
walkdir = "*"
log = "*"
env_logger = "*"
