[package]
name = "pdbget"
version = "0.1.1"
authors = ["Ta Thanh Dinh <tathanhdinh@gmail.com>"]

[dependencies]
goblin = "0.0.19"
glob = "0.2.11"
uuid = { git = "https://github.com/rust-lang-nursery/uuid.git" }
if_chain = "0.1.3"
reqwest = "0.9.4"
indicatif = "0.9.0"
hex = "0.3.2"
# rayon = { git = "https://github.com/rayon-rs/rayon.git" }
rayon = "1.0.3"
byteorder = "1.2.7"
failure = "0.1.3"
structopt = "0.2.13"
lazy_static = "1.2.0"
walkdir = "2.2.6"
log = "0.4.6"
env_logger = "0.5.13"
